# py-template-engine

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  test.yml
examples/: 0_include.py  1_render.py  2_variable.py  3_variable_member.py  4_function.py  5_function_member.py  6_if.py  7_if_member.py  8_each.py  9_each_member.py  each.html  each_member.html  function.html  function_member.html  if.html  if_member.html  include.html  render.html  variable_member.html
py_template_engine/: TemplateEngine.py  TemplaterInterface.py  __init__.py
py_template_engine/sub_engines/: EachTemplater.py  FunctionTemplater.py  IfTemplater.py  IncludeTemplater.py  RenderTemplater.py  VariableTemplater.py  __init__.py
tests/: __init__.py  test_custom_templater.py  test_template_engine.py
tests/sub_engines/: __init__.py  test_each_templater.py  test_function_templater.py  test_if_templater.py  test_include_templater.py  test_render_templater.py  test_variable_templater.py
