[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-template-engine"
version = "0.1.0"
description = "A Python template engine with support for variables, functions, conditionals, loops, and includes"
authors = [
    {name = "Yannick Zimmermann", email = "yannick.zimmermann@proton.me"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["template", "templating", "engine", "jinja", "mustache", "handlebars"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/zimmer-yan/py-template-engine"
Repository = "https://github.com/zimmer-yan/py-template-engine"
Documentation = "https://github.com/zimmer-yan/py-template-engine#readme"
"Bug Tracker" = "https://github.com/zimmer-yan/py-template-engine/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=0.991",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["py_template_engine*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
